Fix project card gap for narrow screens

--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -126,7 +126,7 @@
         padding: 0 var.$mobile-padding;
 
         flex-direction: column;
-        gap: 1rem;
+        gap: var.$mobile-padding;
         justify-content: space-between;
 
     }
